@startuml

title __AMQP's Class Diagram__\n

  package amqp {
    class Application {
        {static} + fanoutExchangeName : String
        - queueName : String
        + Application()
        {static} + main()
        ~ queue()
        ~ exchange()
        ~ binding()
        + rabbitConnectionFactory()
        ~ container()
        ~ listenerAdapter()
        + rabbitTemplate()
        + producerJackson2MessageConverter()
    }
  }
  

  package amqp {
    class Receiver {
        + receiveMessage()
    }
  }
  

  package amqp {
    class Runner {
        - rabbitTemplate : RabbitTemplate
        + Runner()
        + run()
    }
  }
  

  Receiver o-- MessagingController : wbController
  Runner o-- Receiver : receiver


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
